2024-01-26  Oliver Kiddle  <opk@zsh.org>

	* github #110: opensauce04: Completion/Redhat/Command/_dnf:
	Fix incorrect completion for `dnf --showduplicates`

	* github #108: Aurélien Olivier: Completion/Unix/Command/_perlbrew:
	add perlbrew completion

2024-01-25  Bart Schaefer  <schaefer@zsh.org>

	* 52385: Test/B03print.ztst: avoid "tr" in test output formatting

2024-01-24  Bart Schaefer  <schaefer@zsh.org>

	* 52496 + 52377: Doc/Zsh/options.yo, Doc/Zsh/params.yo: clarify
	SPROMPT behavior when CORRECT_ALL is set

	* 52492: Src/math.c: prevent indexing error when using recursive
	arithmetic in array subscript (operator stops on operand error)

	* 52482: Src/subst.c: strip trailing newlines in emulation modes
	of ${ command; }, for bash/ksh compatibility

	* 52476 + cf. 52479: Etc/FAQ.yo: more about nofork substitution

	* 52477: Src/Modules/curses.c: fix "zcurses mouse delay ..."

	* 52473: Doc/Zsh/mod_zutil.yo, Src/Modules/zutil.c: zstyle -q

	* 52468: Src/builtin.c, Src/utils.c: save and restore state of
	correct TTY when using read -s / -d

2024-01-14  Matthew Martin  <phy1729@gmail.com>

	* github #109: Wu Zhenyu: Completion/Linux/Command/_valgrind: Fix
	a typo

2024-01-05  Bart Schaefer  <schaefer@zsh.org>

	* 52465: Doc/Zsh/contrib.yo, Functions/Misc/zmv: use NULL_GLOB
	when expanding the input pattern to avoid NOMATCH exit

2023-12-06  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 52413: Completion/Unix/Command/_iconv: support Citrus version
	on macOS, DragonFly and NetBSD

2023-12-13  Oliver Kiddle  <opk@zsh.org>

	* Florian Weimer: 52383: configure.ac: Avoid incompatible pointer
	types in terminfo global variable checks

	* 52394: configure.ac: alter form of /dev/fd test to work where
	/bin/sh is ksh such as on Solaris 11

	* 52393: Test/ztst.zsh: fix tests on Solaris by omitting -a option
	to diff as it is not supported there

	* 52392: Src/makepro.awk: use octal escape to match = without
	error messages from either GNU awk or Solaris awk
